layout problem with dashboard datatables is fixed

--- a/Content/css/dockyard.css
+++ b/Content/css/dockyard.css
@@ -1166,3 +1166,7 @@ footer p {
 .md-open-menu-container {
     z-index: 1001;
 }
+
+.dataTable td {
+  word-break: break-all;
+}
